--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dia</title>
     <link rel="stylesheet" href="./styles/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap"
+          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
 
   </head>
   <body>
 
     <header class="header">
-        <div class="limiter header__container">
+        <div class="header__container">
 
           <div class="burger-menu">
-            <div class="burger-menu__item-1"></div>
-            <div class="burger-menu__item-2"></div>
-            <div class="burger-menu__item-3"></div>
+            <div class="burger-menu__item-top"></div>
+            <div class="burger-menu__item-middle"></div>
+            <div class="burger-menu__item-bottom"></div>
           </div>
 
           <nav class="header__nav">
@@ -45,9 +47,9 @@
 
           <div class="header__main">
             <div class="header__description">
-              <h1 class="h1-title">Global digital agency</h1>
+              <h1 class="first-title">Strategic Agency</h1>
               <p class="header__description-about">
-                By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable cloud beneath.
+                We believe in the power of bold ideas that can solve business challenges.
               </p>
               <a href="#" class="btn-rectangle header__btn-rectangle">Learn more</a>
             </div>
@@ -57,18 +59,18 @@
                 <img src="./images/slider/slide-pink-escalator.png" alt="Рожевий екскалатор" class="slider__img">
                 <img src="./images/slider/slide-table-with-computer.png" alt="Ноутбук та квіти" class="slider__img">
               </div>
-              <div class="intro">
-                <div class="intro__arrows">
+              <div class="slider__navigation">
+                <div class="slider__navigation__arrows">
                   <a>
-                    <div class="intro__arrows-item intro__arrows-item--left"></div>
+                    <div class="slider__navigation__arrows-item slider__navigation__arrows-item--left"></div>
                   </a>
                   <a>
-                    <div class="intro__arrows-item intro__arrows-item--right"></div>
+                    <div class="slider__navigation__arrows-item slider__navigation__arrows-item--right"></div>
                   </a>
                 </div>
-                <div class="intro__text">
-                  <p class="intro__text-title">Intro</p>
-                  <p class="intro__text-description">By the same illusion which lifts the horizon.</p>
+                <div class="slider__navigation__text">
+                  <p class="slider__navigation__text-title">Intro</p>
+                  <p class="slider__navigation__text-description">By the same illusion which lifts the horizon.</p>
                 </div>
               </div>
             </div>
@@ -77,16 +79,14 @@
         </div>
     </header>
 
-
       <div class="welcome-overlay">
         <div class="welcome">
-          <p class="welcome__title">Welcome</p>
+          <p class="welcome__title">Who we are</p>
           <p class="welcome__text">
-            By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the middle of an immense dark sphere, whose upper half was strewn with silver.
+            We embrace a strategic approach to creative ideas. We are interested in people and human relationships. This is the main thing you need to know about us. We believe in the power of bold ideas that can solve business challenges.
           </p>
         </div>
       </div>
-
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
