--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
     </header>
 
-      <div class="welcome-overlay">
+    <div class="blue-background-lay">
         <div class="welcome">
           <p class="welcome__title">Who we are</p>
           <p class="welcome__text">
@@ -87,6 +87,106 @@
           </p>
         </div>
       </div>
+
+    <div class="expertise limiter">
+      <p class="expertise__title second-title">
+        Our expertise
+      </p>
+
+      <div class="expertise__card card">
+        <div class="card__item expertise__card-item">
+          <img srcset="./images/experties/branding.png,
+                        ./images/experties/branding @2x.png 2x"
+           src="./images/experties/branding.png" alt="Branding" class="card__img">
+          <p class="card__name">Branding</p>
+          <p class="card__description">
+            We create additional value for companies, products, services as well as verbal and visual ways to deliver it to the audience.
+          </p>
+        </div>
+
+        <div class="card__item expertise__card-item">
+          <img srcset="./images/experties/branding.png,
+                        ./images/experties/branding @2x.png 2x"
+               src="./images/experties/branding.png" alt="Branding" class="card__img">
+          <p class="card__name">Communication</p>
+          <p class="card__description">
+            We strive to create communications that can increase media performance. We use everything — words, meanings, stories, art, movies.
+          </p>
+        </div>
+
+        <div class="card__item expertise__card-item">
+          <img srcset="./images/experties/branding.png,
+                        ./images/experties/branding @2x.png 2x"
+               src="./images/experties/branding.png" alt="Branding" class="card__img">
+          <p class="card__name">Strategy</p>
+          <p class="card__description">
+            We create business growth strategies, from the moment of its birth to the achievement of the necessary business indicators.
+          </p>
+        </div>
+      </div>
+    </div>
+
+  <div class="blue-background-lay">
+    <div class="service limiter">
+      <div class="service__description">
+      <p class="service__description-main-title">
+       Process
+      </p>
+      <p class="service__description-secondary-title">
+       Air is a full service creative agency
+      </p>
+      <p class="service__description-text">
+       Deep analytics, strong strategy and bright creative ideas.
+      </p>
+      <p class="service__description-text">
+       We are sure that first-rate job is possible only if all three components are united.
+      </p>
+    </div>
+    <div class="service__card">
+
+      <div class="service__card-item service__card-item--1">
+        <span class="service__card-item-number service__card-item-number--1"></span>
+        <p class="service__card-description">
+        Brand Development <br> Copywriting <br>Logo &amp; Webite <br>Design Packaging
+        </p>
+        <a href="#" class="service__card-button">
+          <img src="./images/experties/arrow.svg" alt="arrow" class="service__card-arrow">
+        </a>
+      </div>
+
+      <div class="service__card-item">
+        <span class="service__card-item-number service__card-item-number--2"></span>
+        <p class="service__card-description">
+        Сontent Production <br>  Graphic Design <br>Video Production <br>Post Production
+        </p>
+        <a href="#" class="service__card-button">
+          <img src="./images/experties/arrow.svg" alt="arrow" class="service__card-arrow">
+        </a>
+      </div>
+
+      <div class="service__card-item service__card-item--3">
+      <span class="service__card-item-number service__card-item-number--3"></span>
+      <p class="service__card-description">
+      Marketing Strategy <br> Email Marketing <br> Paid Advertising <br>Blog Content & SEO
+      </p>
+      <a href="#" class="service__card-button">
+        <img src="./images/experties/arrow.svg" alt="arrow" class="service__card-arrow">
+      </a>
+      </div>
+
+      <div class="service__card-item">
+        <span class="service__card-item-number service__card-item-number--4"></span>
+        <p class="service__card-description">
+        Digital Communications <br> Influencer Marketing <br> Product Placements <br>Strategic Partnerships
+        </p>
+        <a href="#" class="service__card-button">
+          <img src="./images/experties/arrow.svg" alt="arrow" class="service__card-arrow">
+        </a>
+      </div>
+
+    </div>
+    </div>
+  </div>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
